objects/AIA_Area_Manager__c.object
<CustomObject>
    <fields>
        <fullName>AIA_UserId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>To avoid duplicate entries for same user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AIA_isActive__c</fullName>
        <formula>Area_Manager__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Belong_to__c</fullName>
        <label>Area(s) Belong to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Dedicated Representative</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>AIA Admin</fullName>
                </value>
                <value>
                    <fullName>AIA User</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Automated Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>BCM Coordinator</fullName>
                </value>
                <value>
                    <fullName>BeneFact Coder</fullName>
                </value>
                <value>
                    <fullName>BeneFact Portal Tech</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Coder</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Specialist</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Approvers</fullName>
                </value>
                <value>
                    <fullName>Benefit Tester</fullName>
                </value>
                <value>
                    <fullName>Billing Tech</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards Tech</fullName>
                </value>
                <value>
                    <fullName>Cede Document Tech</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Contract Coordinator</fullName>
                </value>
                <value>
                    <fullName>Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Contract Tech</fullName>
                </value>
                <value>
                    <fullName>Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>Facets Migration Contact</fullName>
                </value>
                <value>
                    <fullName>Implementation Coordinator</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Account_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Areas__c</fullName>
        <label>Area(s) Managed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Dedicated Representative</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>AIA Admin</fullName>
                </value>
                <value>
                    <fullName>AIA User</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Automated Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>BCM Coordinator</fullName>
                </value>
                <value>
                    <fullName>BeneFact Coder</fullName>
                </value>
                <value>
                    <fullName>BeneFact Portal Tech</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Coder</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Specialist</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Approvers</fullName>
                </value>
                <value>
                    <fullName>Benefit Tester</fullName>
                </value>
                <value>
                    <fullName>Billing Tech</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards Tech</fullName>
                </value>
                <value>
                    <fullName>Cede Document Tech</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Contract Coordinator</fullName>
                </value>
                <value>
                    <fullName>Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Contract Tech</fullName>
                </value>
                <value>
                    <fullName>Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>Facets Migration Contact</fullName>
                </value>
                <value>
                    <fullName>Implementation Coordinator</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Magellan Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegated_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Area_Manager__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Area_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegated_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Area_Manager__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Delegated_Manager_1__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_Area_Manager2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Area_Manager__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AIA_User_Area_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>AIA object to store the areas which an user is associated to &amp; which an user can manage.
This object will be maintained by AIA Admin users.
It also has fields to save 2 managers per user and store a delegated user for "manager" type of user. This will be used for maintenance of Account Teams for AIA.</description>
    <label>AIA User – Area Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIA User – Area Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefit_Testers</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_Belong_to__c</field>
            <operation>includes</operation>
            <value>BeneFact Tester</value>
        </filters>
        <label>Benefit Testers</label>
    </listViews>
    <listViews>
        <fullName>CAS_Team</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_Belong_to__c</field>
            <operation>equals</operation>
            <value>Client Advisory Services</value>
        </filters>
        <label>CAS Team</label>
    </listViews>
    <listViews>
        <fullName>Contract_Tech_Team</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_Belong_to__c</field>
            <operation>includes</operation>
            <value>Contract Tech</value>
        </filters>
        <filters>
            <field>Areas__c</field>
            <operation>includes</operation>
            <value>Contract Tech</value>
        </filters>
        <filters>
            <field>AIA_isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contract Tech Team</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_managers</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AIA_Area_Manager__c.Manager</value>
        </filters>
        <label>Copy of All - managers</label>
    </listViews>
    <listViews>
        <fullName>Settlements_Analysts</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Area_Manager__c</columns>
        <columns>AIA_isActive__c</columns>
        <columns>Area_Belong_to__c</columns>
        <columns>Areas__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AIA_UserId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_Belong_to__c</field>
            <operation>includes</operation>
            <value>Settlements Analyst</value>
        </filters>
        <label>Settlements Analysts</label>
    </listViews>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Manager</fullName>
        <active>true</active>
        <label>Non-Manager</label>
    </recordTypes>
</CustomObject>